@@ -1,0 +1,30 @@
+$Id$
+
+There is a vast array of theming possibility with Amazon and the Amazon Media
+module.
+
+Most of the theming is done with .tpl.php files. You can copy these .tpl.php
+files into your theme and modify them:
+
+amazon-inline-item.tpl.php              a simple text link
+amazon-item-details.tpl.php             an item with detail info
+amazon-item-detail.tpl.php              a single detail (for amazon_filter)
+amazon-item-thumbnail.tpl.php           a thumbnail image
+amazon-item--large.tpl.php              a large image
+amazon-item--medium.tpl.php             a medium image
+amazon-item.tpl.php                     an item with less detail
+amazon-views-view-row-item.tpl.php      a views row
+
+In addition, "theme hook suggestions" are provided for both amazon-item and
+amazon-inline-item. For an amazon-item, you can theme it with a template
+flle named amazon-item--<type>--<style>, so you could separately theme
+large DVD images with a template file amazon-item--dvd--large.tpl.php in your
+theme.
+
+The amazon_media module, if enabled, extends theming capabilities with a number
+of its own template files and a few template functions. You can override those
+as well.
+
+In most cases an overwhelming number of variables is available in the template
+file. See template_preprocess_amazon_item() in amazon.module for more
+information.
