@@ -1,11 +1,11 @@
 <?php
-$alt_theme = 'amazon_inline_item_' . _amazon_clean_type($item['producttypename']);
-if ($output = theme($alt_theme, array('item' => $item))) {
-  print $output;
-}
-else {
+/**
+ * @file
+ * Theme the 'amazon_inline_item' type.
+ * Available variables:
+ * - $item: The cleaned amazon_item with all data.
+ */
 ?>
 <span class="<?php print _amazon_item_classes($item) ?> amazon-item-inline">
   <?php print l($item['title'], $item['detailpageurl'], array('html' => TRUE, 'attributes' => array('rel' => 'nofollow'))); ?>
 </span>
-<?php } ?>
